cmake_minimum_required(VERSION 3.22)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)
add_subdirectory(longestPalindrome)
add_subdirectory(maxArea)
add_subdirectory(threeSum)
add_subdirectory(letterCombinations)
add_subdirectory(removeNthFromEnd)
add_subdirectory(generateParenthesis)
add_subdirectory(searchRange)